<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/book_scroll_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tab_layout_shape"
    android:fillViewport="true"
    android:padding="4dp" >

    <LinearLayout
        android:id="@+id/book_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/book_screen_shape"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/book_top_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="5dp" >

            <RelativeLayout
                android:id="@+id/book_cover_container"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/book_cover"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:src="@android:color/transparent"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/book_progress_bar"
                    style="@android:style/Widget.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/book_no_image"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:background="#cccccc"
                    android:gravity="center"
                    android:text="NO IMAGE"
                    android:textColor="@android:color/black"
                    android:textSize="10dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/book_title_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="@string/name_label"
                android:textColor="#4abcde" />

            <TextView
                android:id="@+id/book_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_title_label"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="TextView"
                android:textColor="#0f2233" />

            <TextView
                android:id="@+id/book_author_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_title"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="@string/author_label"
                android:textColor="#4abcde" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_author_label"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="TextView"
                android:textColor="#0f2233" />

            <TextView
                android:id="@+id/book_rating_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_author"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="@string/rating_label"
                android:textColor="#4abcde" />

            <RatingBar
                android:id="@+id/book_rating"
                style="@style/small_stars"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_below="@+id/book_rating_label"
                android:layout_toRightOf="@+id/book_cover_container"
                android:max="5"
                android:stepSize="1" />

            <TextView
                android:id="@+id/book_count_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_rating"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="@string/bookcount_label"
                android:textColor="#4abcde" />

            <TextView
                android:id="@+id/book_count"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_count_label"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="TextView"
                android:textColor="#0f2233" />

            <TextView
                android:id="@+id/book_genre_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_count"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="@string/genre_label"
                android:textColor="#4abcde" />

            <TextView
                android:id="@+id/book_genre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_genre_label"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="TextView"
                android:textColor="#0f2233" />

            <TextView
                android:id="@+id/book_about_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_genre"
                android:layout_toRightOf="@+id/book_cover_container"
                android:text="@string/about_label"
                android:textColor="#4abcde" />

            <com.snowball.mangareader.interface_code.EllipsizingTextView
                android:id="@+id/book_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/book_about_label"
                android:text="TextView"
                android:textColor="#0f2233" />

            <Button
                android:id="@+id/book_more_btn"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/book_about"
                android:layout_centerHorizontal="true"
                android:background="@drawable/more_info_button_selector"
                android:text="More info" />
        </RelativeLayout>

        <include layout="@layout/gray_divider_1dp" />

        <LinearLayout
            android:id="@+id/book_bottom_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/book_downloads_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloading_label"
                android:textColor="#4abcde" />

            <com.snowball.mangareader.interface_code.ExpandableHeightGridView
                android:id="@+id/book_downloads_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:numColumns="1"
                android:verticalSpacing="5dp" >
            </com.snowball.mangareader.interface_code.ExpandableHeightGridView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>