<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/main_search_popup_shadow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#77000000"
        android:fadingEdge="none"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <LinearLayout
                android:id="@+id/main_search_popup_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/popup_background_shape"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/main_search_popup_top_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <RelativeLayout
                        android:id="@+id/main_search_popup_cover_container"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/main_search_popup_book_cover"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:padding="2dp"
                            android:src="@android:color/transparent"
                            android:visibility="gone" />

                        <ProgressBar
                            android:id="@+id/main_search_popup_progress_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            style="@android:style/Widget.ProgressBar" />
                        
                        <TextView 
                            android:id="@+id/main_search_popup_no_image"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="NO IMAGE"
                            android:textSize="10dp"
                            android:layout_margin="5dp"
                            android:textColor="@android:color/black"
                            android:background="#cccccc"
                            android:visibility="gone" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/main_search_popup_title_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="@string/name_label"
                        android:textColor="#4abcde" />

                    <TextView
                        android:id="@+id/main_search_popup_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_search_popup_title_label"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="TextView"
                        android:textColor="#0f2233" />

                    <TextView
                        android:id="@+id/main_search_popup_author_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_search_popup_title"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="@string/author_label"
                        android:textColor="#4abcde" />

                    <TextView
                        android:id="@+id/main_search_popup_author"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_search_popup_author_label"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="TextView"
                        android:textColor="#0f2233" />

                    <TextView
                        android:id="@+id/main_search_popup_rating_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_search_popup_author"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="@string/rating_label"
                        android:textColor="#4abcde" />

                    <RatingBar
                        android:id="@+id/main_search_popup_rating"
                        style="@style/small_stars"
                        android:layout_width="wrap_content"
                        android:layout_height="10dp"
                        android:layout_below="@+id/main_search_popup_rating_label"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:max="5"
                        android:stepSize="1" />

                    <TextView
                        android:id="@+id/main_search_popup_count_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_search_popup_rating"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="@string/bookcount_label"
                        android:textColor="#4abcde" />

                    <TextView
                        android:id="@+id/main_search_popup_count"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_search_popup_count_label"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="TextView"
                        android:textColor="#0f2233" />

                    <TextView
                        android:id="@+id/main_search_popup_genre_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_search_popup_count"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="@string/genre_label"
                        android:textColor="#4abcde" />

                    <TextView
                        android:id="@+id/main_search_popup_genre"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_search_popup_genre_label"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="TextView"
                        android:textColor="#0f2233" />

                    <TextView
                        android:id="@+id/main_search_popup_about_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_search_popup_genre"
                        android:layout_toRightOf="@+id/main_search_popup_cover_container"
                        android:text="@string/about_label"
                        android:textColor="#4abcde" />

                    <com.snowball.mangareader.interface_code.EllipsizingTextView
                        android:id="@+id/main_search_popup_about"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/main_search_popup_about_label"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:text="TextView"
                        android:textColor="#0f2233" />

                    <Button
                        android:id="@+id/main_search_popup_more_btn"
                        android:layout_width="fill_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/main_search_popup_about"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/more_info_button_selector"
                        android:text="More info" />
                </RelativeLayout>

                <include layout="@layout/gray_divider_1dp" />

                <LinearLayout
                    android:id="@+id/main_search_popup_bottom_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/main_search_popup_downloads_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/downloading_label"
                        android:textColor="#4abcde" />

                    <com.snowball.mangareader.interface_code.ExpandableHeightGridView
                        android:id="@+id/main_search_popup_downloads_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:verticalSpacing="5dp"
                        android:numColumns="1" >
                    </com.snowball.mangareader.interface_code.ExpandableHeightGridView>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>